--- a/index.html
+++ b/index.html
@@ -39,5 +39,6 @@
 	<hr>
 	<hr>
 	<a href="template.html">Lecture Template</a>
+	<a href="introduction-to-java.html">1) Introduction To Java</a>
 </body>
 </html>
