--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 	<hr>
 	<hr>
 	<a href="template.html">Lecture Template</a>
+	<a href="HistoryOfJava.html">1) History Of Java</a>
 	<a href="introduction-to-java.html">1) Introduction To Java</a>
 </body>
 </html>
