--- a/introduction-to-java.html
+++ b/introduction-to-java.html
@@ -68,7 +68,7 @@
 					1 hr = new slide below
 					2 hr = new slide to the right
 				-->
-				<section data-markdown="md/introduction-to-java.md"
+				<section data-markdown="md/intro-to-objects.md"
          			data-separator="^-\n-\n"
          			data-separator-vertical="^-\n"
          			data-separator-notes="^Note:"
