--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
 	<hr>
 	<a href="template.html">Lecture Template</a>
 	<a href="historyOfJava.html">1) History Of Java</a>
-	<a href="introduction-to-java.html">2) Introduction To Java</a>
-	<a href="intro-to-tdd.html">3)Introduction to TDD</a>
-	<a href="fundament-programing-stuctures.html">4)Fundamental programing strunctures</a>
+	<a href="introduction-to-java.html">2) Introduction to Java</a>
+	<a href="intro-to-maven.html">3 Introduction to Maven</a>
+	<a href="intro-to-tdd.html">4)Introduction to TDD</a>
+	<a href="fundament-programing-stuctures.html">5)Fundamental programing strunctures</a>
 </body>
 </html>
