--- a/index.html
+++ b/index.html
@@ -44,5 +44,6 @@
 	<a href="intro-to-maven.html">3 Introduction to Maven</a>
 	<a href="intro-to-tdd.html">4)Introduction to TDD</a>
 	<a href="fundament-programing-stuctures.html">5)Fundamental programing strunctures</a>
+	<a href="intro-to-oop.html">6)Introduction to OOP</a>
 </body>
 </html>
