Rearrange lessons into categories. Fix spelling

--- a/index.html
+++ b/index.html
@@ -19,14 +19,29 @@
 		<a href="console.html">Introduction to the Console</a>
 		<a href="bash.html">Introduction to Bash Scripting</a>
 		<a href="git.html">Introduction to Version Control with Git</a>
+	</section> -->
+	<section>
+		<strong>Tools</strong>
+		<ol>
+			<li><a href="intro-to-maven.html">Introduction to Maven</a></li>
+		</ol>
 	</section>
+
 	<section> <strong>Core Java</strong>
-		<a href="Java-Initialization.html">Java Object Initialization</a>
-		<a href="Java-Access.html">Java Access Control</a>
+		<ol>
+			<li><a href="historyOfJava.html">History Of Java</a></li>
+			<li><a href="introduction-to-java.html">Introduction to Java</a></li>
+			<li><a href="fundament-programing-stuctures.html">Fundamental programming structures</a></li>
+			<li><a href="intro-to-oop.html">Introduction to OOP</a></li>
+		</ol>
 	</section>
+
 	<section> <strong>Testing</strong>
-		<a href="mockito.html">Unit testing with Mockito</a>
+		<ol>
+			<li><a href="intro-to-tdd.html">Introduction to TDD</a></li>
+		</ol>
 	</section>
+	<!--
 	<section> <strong>Design Patterns</strong>
 		<a href="DesignPatterns.html">Design Patterns</a>
 		<a href="Java-Spring-Design-Patterns.html">Design Patterns in Spring Framework</a>
@@ -39,11 +54,6 @@
 	<hr>
 	<hr>
 	<a href="template.html">Lecture Template</a>
-	<a href="historyOfJava.html">1) History Of Java</a>
-	<a href="introduction-to-java.html">2) Introduction to Java</a>
-	<a href="intro-to-maven.html">3 Introduction to Maven</a>
-	<a href="intro-to-tdd.html">4)Introduction to TDD</a>
-	<a href="fundament-programing-stuctures.html">5)Fundamental programing strunctures</a>
-	<a href="intro-to-oop.html">6)Introduction to OOP</a>
+
 </body>
 </html>
