Add inheritance link to index

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 			<li><a href="introduction-to-java.html">Introduction to Java</a></li>
 			<li><a href="fundament-programing-stuctures.html">Fundamental programming structures</a></li>
 			<li><a href="intro-to-oop.html">Introduction to OOP</a></li>
+			<li><a href="java-inheritance.html">Inheritance in Java</a></li>
 		</ol>
 	</section>
 
