--- a/java-inheritance.html
+++ b/java-inheritance.html
@@ -74,6 +74,13 @@
          			data-charset="utf-8">
 				</section>
 
+				<section data-markdown="md/java-object-class.md"
+							data-separator="^-\n-\n"
+							data-separator-vertical="^-\n"
+							data-separator-notes="^Note:"
+							data-charset="utf-8">
+				</section>
+
 				<!-- Mostly talking about .equals, .hashcode, .toString -->
 				<section data-markdown="md/java-object-methods.md"
 							data-separator="^-\n-\n"
