Add slides for java generics primer

--- a/java-inheritance.html
+++ b/java-inheritance.html
@@ -102,6 +102,12 @@
 				<!-- wrappers and autoboxing -->
 
 				<!-- generic arraylists -->
+				<section data-markdown="md/java-generics-primer.md"
+							data-separator="^-\n-\n"
+							data-separator-vertical="^-\n"
+							data-separator-notes="^Note:"
+							data-charset="utf-8">
+				</section>
 
 
 
