--- a/java-inheritance.html
+++ b/java-inheritance.html
@@ -100,7 +100,6 @@
 				<!-- Abstract classes -->
 
 				<!-- wrappers and autoboxing -->
-
 				<!-- generic arraylists -->
 				<section data-markdown="md/java-generics-primer.md"
 							data-separator="^-\n-\n"
@@ -114,8 +113,12 @@
 				<!-- Enums - extends from Enum, only defined instances available, == works -->
 
 				<!-- Java Class class (Intro to reflection) -->
-
-				<!-- Java method invocation with reflection -->
+				<section data-markdown="md/java-reflection-primer.md"
+							data-separator="^-\n-\n"
+							data-separator-vertical="^-\n"
+							data-separator-notes="^Note:"
+							data-charset="utf-8">
+				</section>
 
 				<!-- Polymorphism definition and usage...? -->
 
