--- a/java-inheritance.html
+++ b/java-inheritance.html
@@ -98,6 +98,12 @@
 				</section>
 
 				<!-- Abstract classes -->
+				<section data-markdown="md/java-abstract-classes.md"
+							data-separator="^-\n-\n"
+							data-separator-vertical="^-\n"
+							data-separator-notes="^Note:"
+							data-charset="utf-8">
+				</section>
 
 				<!-- wrappers and autoboxing -->
 				<!-- generic arraylists -->
@@ -108,9 +114,9 @@
 							data-charset="utf-8">
 				</section>
 
+				<!-- Varargs (v2.0) -->
 
-
-				<!-- Enums - extends from Enum, only defined instances available, == works -->
+				<!-- Enums (v2.0)- extends from Enum, only defined instances available, == works -->
 
 				<!-- Java Class class (Intro to reflection) -->
 				<section data-markdown="md/java-reflection-primer.md"
