Break out second half of inheritance.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 			<li><a href="fundament-programing-stuctures.html">Fundamental programming structures</a></li>
 			<li><a href="intro-to-oop.html">Introduction to OOP</a></li>
 			<li><a href="java-inheritance.html">Inheritance in Java</a></li>
+			<li><a href="java-inheritance-part-2.html">Inheritance part 2: Polymorphism, Generics, and Reflection</a></li>
 		</ol>
 	</section>
 
