--- a/java-inheritance-part-2.html
+++ b/java-inheritance-part-2.html
@@ -88,6 +88,12 @@
 				<!-- Varargs (v2.0) -->
 
 				<!-- Enums (v2.0)- extends from Enum, only defined instances available, == works -->
+				<section data-markdown="md/java-enum-primer.md"
+							data-separator="^-\n-\n"
+							data-separator-vertical="^-\n"
+							data-separator-notes="^Note:"
+							data-charset="utf-8">
+				</section>
 
 				<!-- Java Class class (Intro to reflection) -->
 				<section data-markdown="md/java-reflection-primer.md"
