--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 			<li><a href="intro-to-oop.html">Introduction to OOP</a></li>
 			<li><a href="java-inheritance.html">Inheritance in Java</a></li>
 			<li><a href="java-inheritance-part-2.html">Inheritance part 2: Polymorphism, Generics, and Reflection</a></li>
+			<li><a href="InterfacesandLambdas.html">Interfaces and Lambdas</a></li>
+
+
 		</ol>
 	</section>
 
