--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 			<li><a href="java-inheritance.html">Inheritance in Java</a></li>
 			<li><a href="java-inheritance-part-2.html">Inheritance part 2: Polymorphism, Generics, and Reflection</a></li>
 			<li><a href="InterfacesandLambdas.html">Interfaces and Lambdas</a></li>
+			<li><a href="intro-to-exceptions-assertions-logging.html">Introduction to Exceptions, Assertions, and Logging</a></li>
 
 
 		</ol>
