--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 			<li><a href="InterfacesandLambdas.html">Interfaces and Lambdas</a></li>
 			<li><a href="intro-to-exceptions-assertions-logging.html">Introduction to Exceptions, Assertions, and Logging</a></li>
 			<li><a href="generics.html">Generics</a></li>
+			<li><a href="Java-Collections.html">Collections Framework</a></li>
 
 
 		</ol>
