--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 			<li><a href="intro-to-exceptions-assertions-logging.html">Introduction to Exceptions, Assertions, and Logging</a></li>
 			<li><a href="generics.html">Generics</a></li>
 			<li><a href="Java-Collections.html">Collections Framework</a></li>
+			<li><a href="java-input-output.html">Input and Output</a></li>
 
 
 		</ol>
