--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 	<section> <strong>Spring</strong>
 		<ol>
-			<li><a href="SpringRestIntro.html">Introduction to RESTful Spring</a></li>
+			<li><a href="SpringRESTIntro.html">Introduction to RESTful Spring</a></li>
 		</ol>
 	</section>
 
