--- a/fund-prog-structures-pt1.html
+++ b/fund-prog-structures-pt1.html
@@ -68,7 +68,7 @@
 					1 hr = new slide below
 					2 hr = new slide to the right
 				-->
-				<section data-markdown="md/tc/fund-prog-structures-pt1.md"
+				<section data-markdown="md/tc/Slides_Day1_1_5.md"
          			data-separator="^-\n-\n"
          			data-separator-vertical="^-\n"
          			data-separator-notes="^Note:"
