fix format issue and add a picture to end

--- a/fund-prog-structures-pt3.html
+++ b/fund-prog-structures-pt3.html
@@ -69,6 +69,12 @@
          			data-charset="utf-8">
 				</section>
 
+				<section>
+					<!-- This logo is used in every copy of this file. Drop a new file
+					into img/Logo.jpg to change it across all slide decks -->
+					<img src="http://cdn2-www.dogtime.com/assets/uploads/gallery/30-impossibly-cute-puppies/impossibly-cute-puppy-8.jpg" >
+				</section>
+
 			</div>
 
 		</div>
