--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
 	<section> <strong>Core Java</strong>
 		<ol>
+			<li><a href="tc-agile-legos.html">Tech Connect Agile Legos</a></li>
 			<li><a href="historyOfJava.html">History Of Java</a></li>
 			<li><a href="introduction-to-java.html">Introduction to Java</a></li>
 			<li><a href="fundament-programing-stuctures.html">Fundamental programming structures</a></li>
