--- a/intro-to-exceptions-assertions-logging.html
+++ b/intro-to-exceptions-assertions-logging.html
@@ -11,9 +11,9 @@
 		 -->
 		<meta charset="utf-8">
 
-		<title>Zip Code Lecture Template</title>
+		<title>Zip Code Lecture: Introduction to Exceptions, Assertions, and Logging</title>
 
-		<meta name="description" content="A lecture template for reveal.js-based Zip Code Wilmington Lessons">
+		<meta name="description" content="Slideshow for Zip Code Wilmington Lesson: Introduction to Exceptions, Assertions, and Logging">
 		<!-- TODO: Put your name here: -->
 		<meta name="author" content="Leon Hunter">
 
