--- a/intro-streams-and-lambdas.html
+++ b/intro-streams-and-lambdas.html
@@ -68,7 +68,7 @@
 					1 hr = new slide below
 					2 hr = new slide to the right
 				-->
-				<section data-markdown="md/lecture-template.md"
+				<section data-markdown="md/intro-to-streams-and-lambdas.md"
          			data-separator="^-\n-\n"
          			data-separator-vertical="^-\n"
          			data-separator-notes="^Note:"
