--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 			<li><a href="java-inheritance-part-2.html">Inheritance part 2: Polymorphism, Generics, and Reflection</a></li>
 			<li><a href="InterfacesandLambdas.html">Interfaces and Lambdas</a></li>
 			<li><a href="intro-to-exceptions-assertions-logging.html">Introduction to Exceptions, Assertions, and Logging</a></li>
+			<li><a href="intro-streams-and-lambdas.html">Introduction to Streams and Lambdas</a></li>
 			<li><a href="generics.html">Generics</a></li>
 			<li><a href="Java-Collections.html">Collections Framework</a></li>
 			<li><a href="java-input-output.html">Input and Output</a></li>
