updated index markup to include new slide set

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 			<li><a href="intro-streams-and-lambdas.html">Introduction to Streams and Lambdas</a></li>
 			<li><a href="generics.html">Generics</a></li>
 			<li><a href="Java-Collections.html">Collections Framework</a></li>
+			<li><a href="user-stories.html">User Stories</a></li>
 			<li><a href="java-input-output.html">Input and Output</a></li>
 
 
