--- a/InterfacesandLambdas.html
+++ b/InterfacesandLambdas.html
@@ -11,9 +11,9 @@
 		 -->
 		<meta charset="utf-8">
 
-		<title>Zip Code Lecture Template</title>
+		<title>Zip Code Lecture: Interfaces and Lambdas</title>
 
-		<meta name="description" content="A lecture template for reveal.js-based Zip Code Wilmington Lessons">
+		<meta name="description" content="A reveal.js-based Zip Code Wilmington Lesson: Interfaces and Lambdas">
 		<!-- TODO: Put your name here: -->
 		<meta name="author" content="David Ginzberg">
 
