Added Strings lecture

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<li><a href="Java-Collections.html">Collections Framework</a></li>
 			<li><a href="user-stories.html">User Stories</a></li>
 			<li><a href="java-input-output.html">Input and Output</a></li>
-
+			<li><a href="Strings.html">Strings</a></li>
 
 		</ol>
 	</section>
