--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 			<li><a href="user-stories.html">User Stories</a></li>
 			<li><a href="java-input-output.html">Input and Output</a></li>
 			<li><a href="Strings.html">Strings</a></li>
+			<li><a href="Regular-Expressions.html">Regular Expressions</a></li>
 
 		</ol>
 	</section>
