Added Intro to web

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<li><a href="java-input-output.html">Input and Output</a></li>
 			<li><a href="Strings.html">Strings</a></li>
 			<li><a href="Regular-Expressions.html">Regular Expressions</a></li>
-
+			<li><a href="intro-to-web.html">Intro to the Web</a></li>
 		</ol>
 	</section>
 
