added sql slides. they need to be reviewed

--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
 			<li><a href="intro-to-tdd.html">Introduction to TDD</a></li>
 		</ol>
 	</section>
+
+	<section><strong>Data</strong>
+		<ol>
+			<li><a href="intro-to-sql.html">Introduction to Relational Databases</a></li>
+		</ol>
+	</section>
 	<!--
 	<section> <strong>Design Patterns</strong>
 		<a href="DesignPatterns.html">Design Patterns</a>
