finished python data slides and marked wilhem as author

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 	<section><strong>Data</strong>
 		<ol>
 			<li><a href="intro-to-sql.html">Introduction to Relational Databases</a></li>
+			<li><a href="python-and-data.html">Dealing with Data the Python Way</a></li>
 		</ol>
 	</section>
 	<!--
