--- a/python-and-data.html
+++ b/python-and-data.html
@@ -11,9 +11,9 @@
 		 -->
 		<meta charset="utf-8">
 
-		<title>Zip Code Lecture: Intro to SQL</title>
+		<title>Zip Code Lecture: Dealing with Data the Python Way</title>
 
-		<meta name="description" content="A reveal.js-based Zip Code Wilmington Lesson: Intro to SQL">
+		<meta name="description" content="A reveal.js-based Zip Code Wilmington Lesson: Dealing with Data the Python Way">
 		<!-- TODO: Put your name here: -->
 		<meta name="author" content="Wilhem Alcivar">
 
@@ -68,7 +68,7 @@
 					1 hr = new slide below
 					2 hr = new slide to the right
 				-->
-				<section data-markdown="md/into-to-sql.md"
+				<section data-markdown="md/python-and-data.md"
          			data-separator="^-\n-\n"
          			data-separator-vertical="^-\n"
          			data-separator-notes="^Note:"
