big data and hadoop done. organized big data into its own folder

--- a/big-data-and-hadoop.html
+++ b/big-data-and-hadoop.html
@@ -11,9 +11,9 @@
 		 -->
 		<meta charset="utf-8">
 
-		<title>Zip Code Lecture: Dealing with Data the Python Way</title>
+		<title>Zip Code Lecture: Big Data and Hadoop</title>
 
-		<meta name="description" content="A reveal.js-based Zip Code Wilmington Lesson: Dealing with Data the Python Way">
+		<meta name="description" content="A reveal.js-based Zip Code Wilmington Lesson: Big Data and Hadoop">
 		<!-- TODO: Put your name here: -->
 		<meta name="author" content="Wilhem Alcivar">
 
@@ -68,7 +68,7 @@
 					1 hr = new slide below
 					2 hr = new slide to the right
 				-->
-				<section data-markdown="md/big_data/python-and-data.md"
+				<section data-markdown="md/big_data/big-data-and-hadoop.md"
          			data-separator="^-\n-\n"
          			data-separator-vertical="^-\n"
          			data-separator-notes="^Note:"
