--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 		<ol>
 			<li><a href="intro-to-sql.html">Introduction to Relational Databases</a></li>
 			<li><a href="python-and-data.html">Dealing with Data the Python Way</a></li>
+			<li><a href="big-data-and-hadoop.html">Big Data and Hadoop</a></li>
 		</ol>
 	</section>
 	<!--
