--- a/intro-to-sql.html
+++ b/intro-to-sql.html
@@ -68,7 +68,7 @@
 					1 hr = new slide below
 					2 hr = new slide to the right
 				-->
-				<section data-markdown="md/into-to-sql.md"
+				<section data-markdown="md/big_data/intro-to-sql.md"
          			data-separator="^-\n-\n"
          			data-separator-vertical="^-\n"
          			data-separator-notes="^Note:"
