added databases content overview

--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
 	<section><strong>Data</strong>
 		<ol>
 			<li><a href="intro-to-sql.html">Introduction to Relational Databases</a></li>
+			<li><a href="database-overview.html">Overview of different Database Types</a></li>
 			<li><a href="python-and-data.html">Dealing with Data the Python Way</a></li>
 			<li><a href="big-data-and-hadoop.html">Big Data and Hadoop</a></li>
+
 		</ol>
 	</section>
 	<!--
